; ModuleID = '/home/carl/AnghaBench/openssl/crypto/ocsp/extr_ocsp_ext.c_OCSP_archive_cutoff_new.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/ocsp/extr_ocsp_ext.c_OCSP_archive_cutoff_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NID_id_pkix_OCSP_archiveCutoff = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @OCSP_archive_cutoff_new(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i8* %0, i8** %2, align 8
  store i32* null, i32** %3, align 8
  store i32* null, i32** %4, align 8
  %5 = call i32* (...) @ASN1_GENERALIZEDTIME_new()
  store i32* %5, i32** %4, align 8
  %6 = icmp eq i32* %5, null
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  br label %18

8:                                                ; preds = %1
  %9 = load i32*, i32** %4, align 8
  %10 = load i8*, i8** %2, align 8
  %11 = call i32 @ASN1_GENERALIZEDTIME_set_string(i32* %9, i8* %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %14, label %13

13:                                               ; preds = %8
  br label %18

14:                                               ; preds = %8
  %15 = load i32, i32* @NID_id_pkix_OCSP_archiveCutoff, align 4
  %16 = load i32*, i32** %4, align 8
  %17 = call i32* @X509V3_EXT_i2d(i32 %15, i32 0, i32* %16)
  store i32* %17, i32** %3, align 8
  br label %18

18:                                               ; preds = %14, %13, %7
  %19 = load i32*, i32** %4, align 8
  %20 = call i32 @ASN1_GENERALIZEDTIME_free(i32* %19)
  %21 = load i32*, i32** %3, align 8
  ret i32* %21
}

declare dso_local i32* @ASN1_GENERALIZEDTIME_new(...) #1

declare dso_local i32 @ASN1_GENERALIZEDTIME_set_string(i32*, i8*) #1

declare dso_local i32* @X509V3_EXT_i2d(i32, i32, i32*) #1

declare dso_local i32 @ASN1_GENERALIZEDTIME_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
